--- a/css/style.css
+++ b/css/style.css
@@ -3,3 +3,17 @@
   margin: 0;
   padding: 0;
 }
+
+
+
+.site_header{
+  height: 80px;
+  background-color:#E579E6 ;
+}
+
+
+.primary{
+  height: 400px;
+  background-color: #E1D67A ;
+  margin: 20px 0;
+}
